# indexarr-rs

./: .dockerignore  .gitignore  .woodpecker.yml  CLAUDE.md  Cargo.toml  Dockerfile  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.3.2.md  SYNC_NETWORKING.md  bep-uplift.md  classifier.yml  docker-compose.sync.yml  docker-compose.yml  generate_release.md  uplift.md
.cargo/: config.toml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  container.yml  dependabot-linear.yml  docker-publish.yml
ci/tasks/: comment-github-issues  mirror-github  package-release  smoke-runtime
crates/indexarr-announcer/: Cargo.toml
crates/indexarr-announcer/src/: lib.rs
crates/indexarr-bep28/: Cargo.toml
crates/indexarr-bep28/src/: lib.rs
crates/indexarr-bep28/tests/: spec.rs
crates/indexarr-bep51/: Cargo.toml
crates/indexarr-bep51/src/: lib.rs
crates/indexarr-bep51/tests/: parity.rs
crates/indexarr-classifier/: Cargo.toml
crates/indexarr-classifier/src/: lib.rs  ranking.rs
crates/indexarr-core/: Cargo.toml
crates/indexarr-core/src/: config.rs  db.rs  error.rs  models.rs
crates/indexarr-dht/: Cargo.toml
crates/indexarr-dht/src/: bep51_sampler.rs  engine.rs  ingest.rs  lib.rs  peer_refresher.rs  resolver.rs  tracker_announce.rs
crates/indexarr-identity/: Cargo.toml
crates/indexarr-identity/src/: lib.rs
crates/indexarr-parser/: Cargo.toml
crates/indexarr-parser/src/: lib.rs  maps.rs
crates/indexarr-resolver-v2/: Cargo.toml
crates/indexarr-resolver-v2/src/: lib.rs
crates/indexarr-resolver-v2/tests/: fetch.rs
crates/indexarr-search/: Cargo.toml
crates/indexarr-search/src/: lib.rs
crates/indexarr-sync/: Cargo.toml
crates/indexarr-sync/src/: delta.rs  discovery.rs  epoch.rs  lib.rs  manager.rs  merge.rs
crates/indexarr-tmdb/: Cargo.toml
crates/indexarr-tmdb/src/: lib.rs
crates/indexarr-web/: Cargo.toml
crates/indexarr-web/src/: lib.rs  log_capture.rs  state.rs  torznab.rs
crates/indexarr-web/src/routes/: categories.rs  crud.rs  health.rs  identity.rs  mod.rs  queue.rs  records.rs  search.rs  social.rs  stats.rs  sync.rs  system.rs  torrents.rs  upload.rs
crates/indexarr-xmpp/: Cargo.toml
crates/indexarr-xmpp/src/: lib.rs  plaintext.rs  register.rs
docs/: resolved-issues-v0.3.2.md
installer/: linux-install.sh  setup.ps1  windows.nsi
scripts/: load-into-rusttorrent.py
src/: main.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/api/: client.ts  index.ts  types.ts
ui/src/assets/: base.css
ui/src/components/: ActiveFilters.vue  AdvancedFilters.vue  AppLayout.vue  AppNav.vue  Badge.vue  BarChart.vue  CategorySidebar.vue  CommentNode.vue  CommentSection.vue  CopyText.vue  FileTree.vue  FirstBoot.vue  MagnetButton.vue  NFOViewer.vue  NukeButton.vue  Pagination.vue  SearchBar.vue  Spinner.vue  StatCard.vue  TorrentInfo.vue  TorrentTable.vue  VoteButtons.vue
ui/src/composables/: useAutoRefresh.ts  useFormatters.ts
ui/src/router/: index.ts
ui/src/stores/: identity.ts  search.ts  theme.ts
ui/src/views/: AnnouncerView.vue  DashboardView.vue  HomeView.vue  IndexerView.vue  ScraperView.vue  SystemView.vue  TorrentView.vue  UploadView.vue
ui/src/views/system/: SystemAPI.vue  SystemGeneral.vue  SystemLogs.vue  SystemStatus.vue  SystemSync.vue
website/: CNAME  Caddyfile  Dockerfile  docker-compose.prod.yml  docker-compose.yml  faq.html  index.html
website/css/: style.css
website/demo/: index.html
website/docs/api/: index.html  openapi.json
website/js/: main.js
