[package]
name = "indexarr-announcer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexarr-core.workspace = true
tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
hex.workspace = true
rand.workspace = true
url.workspace = true
