[package]
name = "indexarr-classifier"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexarr-parser = { path = "../indexarr-parser" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
regex = "1"
once_cell = "1"
tracing.workspace = true
