[package]
name = "indexarr-identity"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
ed25519-dalek.workspace = true
sha2.workspace = true
base32.workspace = true
base64.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true
