[package]
name = "indexarr-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
indexarr-core.workspace = true
indexarr-identity = { path = "../indexarr-identity" }

tokio.workspace = true
tokio-util.workspace = true
sqlx.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
base64.workspace = true
hex.workspace = true
rand.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
flate2 = "1"
